<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registrazione">

    <!-- Top App Bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/verde"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/home"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:contentDescription="@string/iconaProfilo"
                android:background="?attr/selectableItemBackgroundBorderless" />

            <!-- Titolo centrato -->
            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_centerInParent="true" />

        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <!-- Titolo -->

    <TextView
        android:id="@+id/Titolo"
        android:text="@string/ModificaPassword"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginTop="10dp"
        />

    <!-- Campo Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PswBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Titolo"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/verde"
        app:endIconMode="password_toggle">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RipPswBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PswBox"
        android:hint="@string/RipetiPassword"
        android:layout_marginTop="5dp"
        app:boxStrokeColor="@color/verde"
        app:endIconMode="password_toggle">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RipPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/SalvaBtn"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:text="@string/Salva"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RipPswBox"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verde"
        />

</androidx.constraintlayout.widget.ConstraintLayout>