<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/Titolo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp"
        android:background="@color/verde"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_profile_placeholder"
            android:contentDescription="Profilo utente"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:id="@+id/titolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/iconButton"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icnLogOut"
            app:icon="@drawable/logout" />

    </LinearLayout>

    <!-- Lista Post -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPosts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/Titolo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/separatore"
        tools:listitem="@layout/row_post"
        />

    <View
        android:id="@+id/separatore"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewPosts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/PostBox"
        android:background="#DDDDDD" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PostBox"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.90"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatore"
        android:hint="@string/ScrPost"
        android:layout_marginBottom="5dp"
        app:boxStrokeColor="@color/verde"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/send"
        app:endIconContentDescription="@string/iconaPosta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PostContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
